feat: tela cliente incluir pedido

--- a/GestaoPedidosWpf/GestaoPedidosWpf.csproj
+++ b/GestaoPedidosWpf/GestaoPedidosWpf.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Services\RelayCommand.cs" />
     <Compile Include="Utils\EnumDescriptionConverter.cs" />
     <Compile Include="Utils\EnumExtensions.cs" />
+    <Compile Include="Utils\Utilitarios.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
     <Compile Include="ViewModels\PedidoViewModel.cs" />
     <Compile Include="ViewModels\PessoaViewModel.cs" />
